# make_way_bot_ros2

./: README.md  Readme.txt
HOW_TO_MAKE_AMR/: Readme.txt  command.txt  ddd  insssy  tutorial.txt
diffdrive_arduino/controllers/: robot_controller_example.yaml
diffdrive_arduino/include/diffdrive_arduino/: config.h
mpu6050-ros2-control/: README.md
mpu6050-ros2-control/mpu6050_demo_bringup/: CMakeLists.txt  package.xml
mpu6050-ros2-control/mpu6050_demo_bringup/config/: controllers.yaml
mpu6050-ros2-control/mpu6050_demo_bringup/launch/: mpu6050_bringup_launch.py  robot_state_publisher_launch.py
mpu6050-ros2-control/mpu6050_demo_description/: CMakeLists.txt  package.xml
mpu6050-ros2-control/mpu6050_demo_description/urdf/: mpu6050.urdf.xacro  mpu6050_ros2_control.xacro
mpu6050-ros2-control/mpu6050_imu_broadcaster/: CMakeLists.txt  LICENSE  mpu6050_imu_broadcaster.xml  package.xml
mpu6050-ros2-control/mpu6050_ros2_control/: CMakeLists.txt  package.xml
nbt_bot/: CMakeLists.txt  README.md  package.xml
nbt_bot/config/: all.rviz  mapper_params_online_async.yaml  my_controllers.yaml  nav2_params.yaml  view_bot.rviz
nbt_bot/description/: lidar.xacro  robot_core.xacro  ros2_control.xacro
nbt_bot/launch/: ball_tracker.launch.py  camera.launch.py  joystick.launch.py  launch_robot.launch.py  launch_sim.launch.py  localization_launch.py  navigation_launch.py  online_async_launch.py  rsp.launch.py
nbt_bot/worlds/: test1.world
script/: RPLFunctions.py  detect2.py  detect_cal.py  detect_object.py  detect_param.py  i.py  scan.py
usb_cam/config/: params_1.yaml
(+6 files in other folders)
